[package]
name = "r55"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
revm = { git = "https://github.com/r0qs/revm" }
alloy-core = { version = "0.7.4", default-features = false }
alloy-sol-types = { version = "0.7.4", default-features = false }

[[bin]]
name = "r55"
