[package]
name = "r55"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
#revm = { git = "https://github.com/r0qs/revm" }
revm = { path = "../../revm-rv/crates/revm" }
alloy-core = "0.7.4"
alloy-sol-types = "0.7.4"

[[bin]]
name = "r55"
